--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -1,106 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="../CSS/style1.css">
-</head>
-<body>
-    <div class="contanier">
-        <header class="header">
+    <link rel="stylesheet" href="../CSS/style1.css" />
+  </head>
+  <body>
+      <header class="header">
         <div class="header-contanier">
-                <nav class="navigation">
-                     <div class="nav-menu-left">
-                    <a class="logo-link" href="../index.html"><span class="web">Web</span>Studio</a>
-                    <ul class="nav-list">
-                        <li class="nav-list-item"><a class="nav-list-link" href="../index.html">Студія</a></li>
-                        <li class="nav-list-item"><a class="nav-list-link" href="./Portfolio.html">Портфоліо</a></li>
-                        <li class="nav-list-item"><a class="nav-list-link" href="#">Контакти</a></li>
-                    </ul>
-                    </div>
-                </nav>
-            <div class="nav-menu-right">
-                    <a class="contact-link" href="mailto:info@devstudio.com"> info@devstudio.com </a>
-                    <a class="contact-link" href="tel:+380961111111"> +38 096 111 11 11 </a>
+          <nav class="navigation">
+            <div class="nav-menu-left">
+              <a class="logo-link" href="../index.html"
+                ><span class="web">Web</span>Studio</a
+              >
+              <ul class="nav-list">
+                <li class="nav-list-item">
+                  <a class="nav-list-link" href="../index.html">Студія</a>
+                </li>
+                <li class="nav-list-item">
+                  <a class="nav-list-link" href="./pages/Portfolio.html"
+                    >Портфоліо</a
+                  >
+                </li>
+                <li class="nav-list-item">
+                  <a class="nav-list-link" href="#">Контакти</a>
+                </li>
+              </ul>
             </div>
+          </nav>
+          <div class="nav-menu-right">
+            <a class="contact-link" href="mailto:info@devstudio.com">
+              <svg class="icon-contact" width="16" height="12">
+                <use href="../icons/symbol-defs.svg#icon-email"></use>
+              </svg>
+              info@devstudio.com
+            </a>
+            <a class="contact-link" href="tel:+380961111111">
+              <svg class="icon-contact" width="10" height="16">
+                <use href="../icons/symbol-defs.svg#icon-phone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
+          </div>
         </div>
-    </header>
-        <main class="main">
-            <section class="main-section-bth">
-                <ul class="main-list-bth">
-                    <li class="main-button"><button class="main-button-item">Усі</button></li>
-                    <li class="main-button"><button class="main-button-item">Веб-сайти</button></li>
-                    <li class="main-button"><button class="main-button-item">Додатки</button></li>
-                    <li class="main-button"><button class="main-button-item">Дизайн</button></li>
-                    <li class="main-button"><button class="main-button-item">Маркетинг</button></li>
-                </ul>
-            </section>
-            <section class="main-section-cards">
-                <ul class="list-cards">
-                    <li class="main-list-item">
-                        <img class="main-img" src="../Image/img1.5.jpg" alt="computer">
-                        <h3 class="main-title">Технокряк</h3>
-                        <p class="main-parag">Веб-сайт</p>
-                    </li>
-                    <li class="main-list-item">
-                        <img class="main-img" src="../Image/img2.5.jpg" alt="basketboll">
-                        <h3 class="main-title">Постер New Orlean vs Golden Star</h3>
-                        <p class="main-parag">Дизайн</p>
-
-                    </li>
-                    <li class="main-list-item">
-                        <img class="main-img" src="../Image/img3.5.jpg" alt="seafood">
-                        <h3 class="main-title">Ресторан Seafood</h3>
-                        <p class="main-parag">Додаток</p>
-                    </li>
-                    <li class="main-list-item">
-                        <img class="main-img" src="../Image/img4.5.jpg" alt="prime">
-                        <h3 class="main-title">Проєкт Prime</h3>
-                        <p class="main-parag">Маркетинг</p>
-                    </li>
-                    <li class="main-list-item">
-                        <img class="main-img" src="../Image/img5.5.jpg" alt="box">
-                        <h3 class="main-title">Проєкт Boxes</h3>
-                        <p class="main-parag">Додаток</p>
-                    </li>
-                    <li class="main-list-item">
-                        <img class="main-img" src="../Image/img6.5.jpg" alt="computer">
-                        <h3 class="main-title">Inspiration has no Borders</h3>
-                        <p class="main-parag">Веб-сайт</p>
-                    </li>
-                    <li class="main-list-item">
-                        <img class="main-img" src="../Image/img7.5.jpg" alt="book">
-                        <h3 class="main-title">Видання Limited Edition</h3>
-                        <p class="main-parag">Дизайн</p>
-                    </li>
-                    <li class="main-list-item">
-                        <img class="main-img" src="../Image/img8.5.jpg" alt="lab">
-                        <h3 class="main-title">Проєкт LAB</h3>
-                        <p class="main-parag">Маркетинг</p>
-                    </li>
-                    <li class="main-list-item">
-                        <img class="main-img" src="../Image/img9.5.jpg" alt="computer">
-                        <h3 class="main-title">Growing Business</h3>
-                        <p class="main-parag">Додаток</p>
-                    </li>
-                </ul>
-            </section>
-        </main>
-    <footer>
-        <section class="footer">
-            <div class="footer-contact">
-                <a class="footer-logo-link" href="../index.html"><span class="web">Web</span>Studio</a>
-                <p class="footer-parag">м. Київ, пр-т Лесі Українки, 26</p>
-                <ul class="footer-contact-list">
-                    <li><a href="mailto:info@devstudio.com"> info@devstudio.com </a></li>
-                    <li><a href="tel:+380961111111"> +38 096 111 11 11 </a></li>
-                </ul>
-            </div>
+      </header>
+      <main class="main">
+        <section class="main-section-bth">
+          <ul class="main-list-bth">
+            <li class="main-button">
+              <button class="main-button-item">Усі</button>
+            </li>
+            <li class="main-button">
+              <button class="main-button-item">Веб-сайти</button>
+            </li>
+            <li class="main-button">
+              <button class="main-button-item">Додатки</button>
+            </li>
+            <li class="main-button">
+              <button class="main-button-item">Дизайн</button>
+            </li>
+            <li class="main-button">
+              <button class="main-button-item">Маркетинг</button>
+            </li>
+          </ul>
         </section>
-    </footer>
-</div>
-</body>
+        <section class="main-section-cards">
+          <ul class="list-cards">
+            <li class="main-list-item">
+              <img class="main-img" src="../Image/img1.5.jpg" alt="computer" />
+              <h3 class="main-title">Технокряк</h3>
+              <p class="main-parag">Веб-сайт</p>
+            </li>
+            <li class="main-list-item">
+              <img
+                class="main-img"
+                src="../Image/img2.5.jpg"
+                alt="basketboll"
+              />
+              <h3 class="main-title">Постер New Orlean vs Golden Star</h3>
+              <p class="main-parag">Дизайн</p>
+            </li>
+            <li class="main-list-item">
+              <img class="main-img" src="../Image/img3.5.jpg" alt="seafood" />
+              <h3 class="main-title">Ресторан Seafood</h3>
+              <p class="main-parag">Додаток</p>
+            </li>
+            <li class="main-list-item">
+              <img class="main-img" src="../Image/img4.5.jpg" alt="prime" />
+              <h3 class="main-title">Проєкт Prime</h3>
+              <p class="main-parag">Маркетинг</p>
+            </li>
+            <li class="main-list-item">
+              <img class="main-img" src="../Image/img5.5.jpg" alt="box" />
+              <h3 class="main-title">Проєкт Boxes</h3>
+              <p class="main-parag">Додаток</p>
+            </li>
+            <li class="main-list-item">
+              <img class="main-img" src="../Image/img6.5.jpg" alt="computer" />
+              <h3 class="main-title">Inspiration has no Borders</h3>
+              <p class="main-parag">Веб-сайт</p>
+            </li>
+            <li class="main-list-item">
+              <img class="main-img" src="../Image/img7.5.jpg" alt="book" />
+              <h3 class="main-title">Видання Limited Edition</h3>
+              <p class="main-parag">Дизайн</p>
+            </li>
+            <li class="main-list-item">
+              <img class="main-img" src="../Image/img8.5.jpg" alt="lab" />
+              <h3 class="main-title">Проєкт LAB</h3>
+              <p class="main-parag">Маркетинг</p>
+            </li>
+            <li class="main-list-item">
+              <img class="main-img" src="../Image/img9.5.jpg" alt="computer" />
+              <h3 class="main-title">Growing Business</h3>
+              <p class="main-parag">Додаток</p>
+            </li>
+          </ul>
+        </section>
+      </main>
+      <footer class="footer">
+        <div class="footer-content contanier">
+          <section class="footer-contact">
+            <a class="footer-logo-link" href="./index.html"
+              ><span class="web">Web</span>Studio</a
+            >
+            <p class="footer-parag">м. Київ, пр-т Лесі Українки, 26</p>
+            <ul class="footer-contact-list">
+              <li class="footer-cont">
+                <a href="mailto:info@devstudio.com"> info@devstudio.com </a>
+              </li>
+              <li class="footer-cont"><a href="tel:+380961111111"> +38 096 111 11 11 </a></li>
+            </ul>
+          </section>
+
+          <section class="footer-links">
+            <h3 class="footer-title">приєднуйтесь</h3>
+            <ul class="footer-list-links">
+              <li class="footer-list-item">
+                <a class="link-footer-icon" href="#">
+                <svg class="footer-svg">
+                  <use href="../icons/symbol-defs.svg#icon-inst"></use>
+                </svg>
+              </a>
+              </li>
+              <li class="footer-list-item">
+                <a class="link-footer-icon" href="#">
+                <svg class="footer-svg">
+                  <use href="../icons/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+              </li>
+              <li class="footer-list-item">
+                <a class="link-footer-icon" href="#">
+                <svg class="footer-svg">
+                  <use href="../icons/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+              </li>
+              <li class="footer-list-item">
+                <a class="link-footer-icon" href="#">
+                <svg class="footer-svg">
+                  <use href="../icons/symbol-defs.svg#icon-in"></use>
+                </svg>
+              </a>
+              </li>
+            </ul>
+          </section>
+
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
