--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -78,6 +78,12 @@
               </div>
                 <h3 class="main-title">Технокряк</h3>
                 <p class="main-parag">Веб-сайт</p>
+                <div class="box">
+                  <div class="overlay">
+                    <h3 class="box-text">
+                    Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
+                  </div>
+                </div>
             </li>
             <li class="main-list-item">
               <div class="thumb">
@@ -89,6 +95,12 @@
               </div>
               <h3 class="main-title">Постер New Orlean vs Golden Star</h3>
               <p class="main-parag">Дизайн</p>
+              <div class="box">
+                  <div class="overlay">
+                    <h3 class="box-text">
+                    Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
+                  </div>
+                </div>
             </li>
             <li class="main-list-item">
               <div class="thumb">
@@ -96,6 +108,12 @@
               </div>
               <h3 class="main-title">Ресторан Seafood</h3>
               <p class="main-parag">Додаток</p>
+              <div class="box">
+                  <div class="overlay">
+                    <h3 class="box-text">
+                    Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
+                  </div>
+                </div>
             </li>
             <li class="main-list-item">
               <div class="thumb">
@@ -103,6 +121,12 @@
               </div>
               <h3 class="main-title">Проєкт Prime</h3>
               <p class="main-parag">Маркетинг</p>
+              <div class="box">
+                  <div class="overlay">
+                    <h3 class="box-text">
+                    Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
+                  </div>
+                </div>
             </li>
             <li class="main-list-item">
               <div class="thumb">
@@ -110,6 +134,12 @@
               </div>
               <h3 class="main-title">Проєкт Boxes</h3>
               <p class="main-parag">Додаток</p>
+              <div class="box">
+                  <div class="overlay">
+                    <h3 class="box-text">
+                    Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
+                  </div>
+                </div>
             </li>
             <li class="main-list-item">
               <div class="thumb">
@@ -117,6 +147,12 @@
               </div>
               <h3 class="main-title">Inspiration has no Borders</h3>
               <p class="main-parag">Веб-сайт</p>
+              <div class="box">
+                  <div class="overlay">
+                    <h3 class="box-text">
+                    Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
+                  </div>
+                </div>
             </li>
             <li class="main-list-item">
               <div class="thumb">
@@ -124,6 +160,12 @@
               </div>
               <h3 class="main-title">Видання Limited Edition</h3>
               <p class="main-parag">Дизайн</p>
+              <div class="box">
+                  <div class="overlay">
+                    <h3 class="box-text">
+                    Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
+                  </div>
+                </div>
             </li>
             <li class="main-list-item">
               <div class="thumb">
@@ -131,6 +173,12 @@
               </div>
               <h3 class="main-title">Проєкт LAB</h3>
               <p class="main-parag">Маркетинг</p>
+              <div class="box">
+                  <div class="overlay">
+                    <h3 class="box-text">
+                    Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
+                  </div>
+                </div>
             </li>
             <li class="main-list-item">
               <div class="thumb">
@@ -138,6 +186,12 @@
               </div>
               <h3 class="main-title">Growing Business</h3>
               <p class="main-parag">Додаток</p>
+              <div class="box">
+                  <div class="overlay">
+                    <h3 class="box-text">
+                    Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
+                  </div>
+                </div>
             </li>
           </ul>
         </section>
