--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
@@ -55,8 +56,8 @@
 
       <main>
         <!--Section hero-->
-        <section class="hero">
-          <h1 class="hero-title">
+        <section data-aos="zoom-in" class="hero">
+          <h1 class="hero-title animate_animated animate__backInDown">
             Ефективні рішення для<br />
             вашого бізнесу
           </h1>
@@ -106,7 +107,7 @@
           </div> 
         </section>
         <!--section advantages-->
-        <section class="features contanier">
+        <section class="features contanier" data-aos="fade-left">
           <h2 class="visually-hidden" hidden>Perevagy</h2>
           <ul class="features-list">
             <li class="features-list-item">
@@ -158,7 +159,7 @@
             </li>
           </ul>
         </section>
-        <section class="electricity contanier">
+        <section class="electricity contanier" data-aos="fade-right"">
           <h2 class="electricity-parag">Чим ми займаємося</h2>
           <ul class="electricity-list">
             <li class="electricity-list-item">
@@ -428,5 +429,9 @@
       </footer>
 
       <script src="./modal.js"></script>
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <script>
+        AOS.init();
+      </script>
   </body>
 </html>
